# lica-bench

./: README.md  pyproject.toml
docs/: CONTRIBUTING.md  svg_loo_provenance.md
scripts/: README.md  run_benchmarks.py
src/design_benchmarks/: __init__.py  benchmark_data_paths.py
src/design_benchmarks/metrics/: __init__.py  remove_metric.py
src/design_benchmarks/metrics/svg_loo/: __init__.py  attribution.py  parsing.py  rendering.py  scoring.py
src/design_benchmarks/models/: __init__.py  api_models.py  local_models.py
src/design_benchmarks/tasks/: category.py  layout.py  lottie.py  svg.py  template.py  typography.py
